Fix several layout issues and improve responsiveness

--- a/src/components/CurrentStatus.css
+++ b/src/components/CurrentStatus.css
@@ -1,5 +1,5 @@
 * {
-  font-family: 'Quicksand';
+  font-family: 'Quicksand', sans-serif;
   box-sizing: border-box;
 }
 .cs-container {
@@ -17,7 +17,7 @@
 }
 
 .cs-bg {
-  opacity: 0.8;
+  opacity: 0.7;
   position: absolute;
   left: 0;
   top: 0;
@@ -36,7 +36,7 @@
   margin-bottom: 16px;
 }
 .cs-basics .temp {
-  font-size: 144px;
+  font-size: 6em;
 }
 
 .cs-basics .cs-info {
@@ -103,20 +103,6 @@
 }
 
 @media screen and (max-width: 800px) {
-  .cs-basics .temp {
-    font-size: 3.5em;
-  }
-
-  .cs-basics .cs-info {
-    font-size: 1.5em;
-  }
-
-  .cs-more {
-    padding-top: 15%;
-    font-size: 1em;
-    font-weight: unset;
-  }
-
   .cs-content {
     position: relative;
     padding: 12% 10%;
